cmake_minimum_required(VERSION 3.23)
project(usaco)

set(CMAKE_CXX_STANDARD 20)

add_executable(00282 2013/Open/Silver/p1.cpp)
add_executable(00622 2016/February/Gold/p2.cpp)
add_executable(00815 2018/February/Gold/p3.cpp)
add_executable(01254 2022/December/Silver/p1.cpp)
add_executable(01255 2022/December/Silver/p2.cpp)
add_executable(01256 2022/December/Silver/p3.cpp)
add_executable(01283 2023/January/Gold/p3.cpp)